Bootstrap to antd

--- a/common/src/main/resources/i18n_en_US.properties
+++ b/common/src/main/resources/i18n_en_US.properties
@@ -173,3 +173,46 @@ home=home
 permissionError=No permission
 useUTF=Please use UTF-8 <a href="https://blog.zrlog.com/post/faq-collect#\u7A0B\u5E8F\u7F16\u7801">https://blog.zrlog.com/post/faq-collect#\u7A0B\u5E8F\u7F16\u7801</a>
 admin.upgrade.cycle.never=Never
+title=Title
+keywords=Keywords
+author=Author
+type=Type
+createTime=Create Time
+lastUpdateDate=Last UpdateDate
+viewCount=View Count
+rubbish=Rubbish
+edit=Edit
+content=Content
+nickName=Nick Name
+commentUserHomePage=Home Page
+typeName=Type Name
+alias=Alias
+mark=Mark
+count=Count
+website=WebSite
+desc=Desc
+order=Order
+navName=Nav Name
+yes=Yes
+no=No
+saving=Saving
+auto=Auto
+saveSuccess=Save success
+releaseSuccess=release success
+addAttachment=Attachment
+addVideo=Video
+copPreviewHtmlToClipboard=Copy preview html to clipboard
+copPreviewHtmlToClipboardSuccess=Copy preview html to clipboard success
+connectError=Not connected.\nPlease verify your network connection.
+response404=The requested page not found. [404]
+response500=Internal Server Error [500].
+responseJsonError=Requested JSON parse failed.
+responseTimeout=Time out error.
+requestAbort=abort
+uncaughtError=Uncaught Error
+notFoundNewVersion=No new version
+newVersion=New version
+updateSuccess=Update success
+updateError=Some error
+deleteError=Delete error
+close=Close"
