--- a/common/src/main/resources/i18n_zh_CN.properties
+++ b/common/src/main/resources/i18n_zh_CN.properties
@@ -179,3 +179,46 @@ home=\u4E3B\u9875
 manage=\u7BA1\u7406
 permissionError=\u7981\u6B62\u7684\u64CD\u4F5C
 useUTF=\u89E3\u51B3\u4E71\u7801 <a href="https://blog.zrlog.com/post/faq-collect#\u7A0B\u5E8F\u7F16\u7801">https://blog.zrlog.com/post/faq-collect#\u7A0B\u5E8F\u7F16\u7801</a>
+title=\u6807\u9898
+keywords=\u5173\u952E\u5B57
+author=\u4F5C\u8005
+type=\u5206\u7C7B
+createTime=\u521B\u5EFA\u65F6\u95F4
+lastUpdateDate=\u6700\u540E\u66F4\u65B0\u65F6\u95F4
+viewCount=\u6D4F\u89C8\u91CF
+rubbish=\u8349\u7A3F
+edit=\u7F16\u8F91
+content=\u5185\u5BB9
+nickName=\u6635\u79F0
+commentUserHomePage=\u8BC4\u8BBA\u8005\u4E3B\u9875
+typeName=\u5206\u7C7B\u540D\u79F0
+alias=\u522B\u540D
+mark=\u6807\u8BB0
+count=\u8BA1\u6570
+website=\u7F51\u7AD9
+desc=\u63CF\u8FF0
+order=\u6392\u5E8F
+navName=\u5BFC\u822A\u540D\u79F0
+yes=\u662F
+no=\u5426
+saving=\u6B63\u5728\u4FDD\u5B58\u4E2D\uFF0C\u8BF7\u7A0D\u7B49...
+auto=\u81EA\u52A8
+saveSuccess=\u4FDD\u5B58\u6210\u529F
+releaseSuccess=\u53D1\u5E03\u6210\u529F
+addAttachment=\u6DFB\u52A0\u9644\u4EF6
+addVideo=\u6DFB\u52A0\u89C6\u9891
+copPreviewHtmlToClipboard=\u62F7\u8D1D\u9884\u89C8HTML\u5230\u7C98\u8D34\u677F
+copPreviewHtmlToClipboardSuccess=\u5DF2\u6210\u529F\u62F7\u8D1D\u9884\u89C8HTML\u5230\u7C98\u8D34\u677F
+connectError=\u8BF7\u68C0\u67E5\u7F51\u7EDC\u662F\u5426\u6B63\u5E38
+response404=\u8BF7\u6C42\u8D44\u6E90\u4E0D\u5B58\u5728\uFF0C\u6216\u5DF2\u88AB\u79FB\u51FA
+response500=\u7A0B\u5E8F\u5185\u90E8\u9519\u8BEF
+responseJsonError=\u54CD\u5E94\u6570\u636E\u4E0D\u662FJSON
+responseTimeout=\u54CD\u5E94\u8D85\u65F6
+requestAbort=\u8BF7\u6C42\u88AB\u653E\u5F03
+uncaughtError=\u672A\u77E5\u9519\u8BEF
+notFoundNewVersion=\u6682\u65F6\u6CA1\u6709\u65B0\u7248\u672C
+newVersion=\u65B0\u7248\u672C
+updateSuccess=\u66F4\u65B0\u6210\u529F
+updateError=\u53D1\u751F\u4E86\u4E00\u4E9B\u5F02\u5E38
+deleteError=\u5220\u9664\u5931\u8D25
+close=\u5173\u95ED
