--- a/common/src/main/resources/i18n_en_US.properties
+++ b/common/src/main/resources/i18n_en_US.properties
@@ -215,4 +215,5 @@ newVersion=New version
 updateSuccess=Update success
 updateError=Some error
 deleteError=Delete error
-close=Close"
+close=Close
+templateCenter=Template center
