--- a/common/src/main/resources/i18n_zh_CN.properties
+++ b/common/src/main/resources/i18n_zh_CN.properties
@@ -222,3 +222,4 @@ updateSuccess=\u66F4\u65B0\u6210\u529F
 updateError=\u53D1\u751F\u4E86\u4E00\u4E9B\u5F02\u5E38
 deleteError=\u5220\u9664\u5931\u8D25
 close=\u5173\u95ED
+templateCenter=\u4E3B\u9898\u4E2D\u5FC3
