Optimize jquery load

--- a/common/src/main/resources/i18n_zh_CN.properties
+++ b/common/src/main/resources/i18n_zh_CN.properties
@@ -221,5 +221,6 @@ newVersion=\u65B0\u7248\u672C
 updateSuccess=\u66F4\u65B0\u6210\u529F
 updateError=\u53D1\u751F\u4E86\u4E00\u4E9B\u5F02\u5E38
 deleteError=\u5220\u9664\u5931\u8D25
+deleteTips=\u786E\u5B9A\u5220\u9664\u5417\uFF1F
 close=\u5173\u95ED
 templateCenter=\u4E3B\u9898\u4E2D\u5FC3
