--- a/common/src/main/resources/i18n_en_US.properties
+++ b/common/src/main/resources/i18n_en_US.properties
@@ -150,7 +150,7 @@ writeCover=Write Cover
 email=Email
 inputArticleTitle=Please enter article title
 inputArticleAlias=Please enter article alias
-commentAble=Allow Comment
+commentAble=Comment
 recommendable=Recommend
 preview=Preview
 private=Private
@@ -215,5 +215,6 @@ newVersion=New version
 updateSuccess=Update success
 updateError=Some error
 deleteError=Delete error
+deleteTips=Sure to delete?
 close=Close
 templateCenter=Template center
