Optimize jquery load

--- a/common/src/main/resources/i18n_en_US.properties
+++ b/common/src/main/resources/i18n_en_US.properties
@@ -215,5 +215,6 @@ newVersion=New version
 updateSuccess=Update success
 updateError=Some error
 deleteError=Delete error
+deleteTips=Sure to delete?
 close=Close
 templateCenter=Template center
