--- a/common/src/main/resources/i18n_en_US.properties
+++ b/common/src/main/resources/i18n_en_US.properties
@@ -55,7 +55,7 @@ comment=Comment
 noLastLog=There is no last one.
 admin.theme.version=edition
 searchTip=Search keywords...
-admin.template.manage=Theme settings
+admin.template.manage=Template settings
 admin.setting=Settings
 admin.type.manage=Category
 installWebSiteInfo=Website information
@@ -77,7 +77,7 @@ templatePathNotNull=Theme path cannot be empty
 month=month
 admin.link.manage=Link
 archive=Archive
-language=Select language
+language=language
 admin.user.info=Personal information
 installWebSiteSecond=Site sub title
 admin.theme.digest=brief introduction
@@ -143,7 +143,7 @@ checkUpgrade=Check new version
 ################################################################
 # errorCode
 ################################################################
-admin.session.timeout=Session timeout, please try login again;
+admin.session.timeout=Session timeout, please try login again
 suggestAndFeedback=Suggest & Feedback
 login=Sign in
 writeCover=Write Cover
