--- a/common/src/main/resources/i18n_zh_CN.properties
+++ b/common/src/main/resources/i18n_zh_CN.properties
@@ -36,7 +36,7 @@ login=\u767B\u5F55
 userNameOrPasswordError=\u7528\u6237\u540D\u6216\u5BC6\u7801\u9519\u8BEF
 updatePersonInfoSuccess=\u66F4\u65B0\u4E2A\u4EBA\u4FE1\u606F\u6210\u529F
 userNameAndPasswordRequired=\u7528\u6237\u540D\u548C\u5BC6\u7801\u90FD\u4E0D\u80FD\u4E3A\u7A7A
-language=\u9009\u62E9\u8BED\u8A00
+language=\u8BED\u8A00
 languageChinese=\u7B80\u4F53\u4E2D\u6587
 languageEnglish=English
 blogManage=\u6587\u7AE0\u7BA1\u7406
