Add template config

--- a/common/src/main/resources/i18n_en_US.properties
+++ b/common/src/main/resources/i18n_en_US.properties
@@ -218,3 +218,4 @@ deleteError=Delete error
 deleteTips=Sure to delete?
 close=Close
 templateCenter=Template center
+templateConfig=Template config
