--- a/common/src/main/resources/i18n_zh_CN.properties
+++ b/common/src/main/resources/i18n_zh_CN.properties
@@ -224,3 +224,4 @@ deleteError=\u5220\u9664\u5931\u8D25
 deleteTips=\u786E\u5B9A\u5220\u9664\u5417\uFF1F
 close=\u5173\u95ED
 templateCenter=\u4E3B\u9898\u4E2D\u5FC3
+templateConfig=\u4E3B\u9898\u914D\u7F6E
