--- a/common/src/main/resources/i18n_en_US.properties
+++ b/common/src/main/resources/i18n_en_US.properties
@@ -219,3 +219,7 @@ deleteTips=Sure to delete?
 close=Close
 templateCenter=Template center
 templateConfig=Template config
+articleEditExitWithOutSaveSuccess=You have attempted to leave this page. Are you sure?
+admin.upgrade.cycle.oneDay=Even day
+admin.upgrade.cycle.oneWeek=Even week
+admin.upgrade.cycle.halfMonth=Half month
