--- a/common/src/main/resources/i18n_zh_CN.properties
+++ b/common/src/main/resources/i18n_zh_CN.properties
@@ -225,3 +225,4 @@ deleteTips=\u786E\u5B9A\u5220\u9664\u5417\uFF1F
 close=\u5173\u95ED
 templateCenter=\u4E3B\u9898\u4E2D\u5FC3
 templateConfig=\u4E3B\u9898\u914D\u7F6E
+articleEditExitWithOutSaveSuccess=\u6587\u7AE0\u672A\u4FDD\u5B58\uFF0C\u786E\u5B9A\u79BB\u5F00\u9875\u9762\u5417\uFF1F
