--- a/common/src/main/resources/i18n/install_en_US.properties
+++ b/common/src/main/resources/i18n/install_en_US.properties
@@ -23,9 +23,9 @@ installWizard=ZrLog - Installation Wizard
 connectDbError_1=Database not exists.
 connectDbError_2=Please check connection info, or check mysql is run, or database can be connected.
 connectDbError_3=User name or password error.
-connectDbError_4=Missing mysql-driver.jar file.
-connectDbError_5=Create table error
-connectDbError_6=Unknown error, Please connect the author
+connectDbError_4=Unknown SQLException, Please view program console for more info.
+connectDbError_5=Missing mysql-driver.jar file.
+connectDbError_6=Unknown error, Please connect the author.
 installAdmin=Administrator account
 installDbName=Database name
 utfTips=Please use UTF-8 <a href="https://blog.zrlog.com/post/faq-collect#\u7A0B\u5E8F\u7F16\u7801" target="_blank">https://blog.zrlog.com/post/faq-collect#\u7A0B\u5E8F\u7F16\u7801</a>
