Optimize install page

--- a/common/src/main/resources/i18n/install_en_US.properties
+++ b/common/src/main/resources/i18n/install_en_US.properties
@@ -1,6 +1,6 @@
 installInputDbInfo=Fill in database information
 installWebSiteTitle=Website title
-installed=Has been installed, if you need to re install, delete the WEB-INF/install.lock file
+installedTips=Has been installed, if you need to re install, delete the WEB-INF/install.lock file
 installDbHost=Database server
 installWarn1=The installation process does not create the database, make sure the database exists
 installWarn2=The installation process will delete, clear the original program data and use the data table
