Optimize static html cache plugin

--- a/common/src/main/resources/i18n/blog_en_US.properties
+++ b/common/src/main/resources/i18n/blog_en_US.properties
@@ -155,4 +155,6 @@ todayComment=Today Comment
 totalComment=Total Comment
 totalArticle=Total Article
 totalArticleView=Total View
+usedDiskSpace=Used Disk Space
+usedCacheSpace=Used Cache Space
 add=Add
