--- a/common/src/main/resources/i18n/blog_zh_CN.properties
+++ b/common/src/main/resources/i18n/blog_zh_CN.properties
@@ -161,4 +161,6 @@ todayComment=\u4ECA\u65E5\u8BC4\u8BBA
 totalComment=\u8BC4\u8BBA\u603B\u6570
 totalArticle=\u6587\u7AE0\u603B\u6570
 totalArticleView=\u6587\u7AE0\u6D4F\u89C8\u603B\u6570
+usedDiskSpace=\u603B\u4F7F\u7528\u78C1\u76D8\u7A7A\u95F4
+usedCacheSpace=\u7F13\u5B58\u4F7F\u7528\u78C1\u76D8\u7A7A\u95F4
 add=\u6DFB\u52A0
