--- a/admin-web/src/main/resources/i18n/admin_en_US.properties
+++ b/admin-web/src/main/resources/i18n/admin_en_US.properties
@@ -46,7 +46,7 @@ day=day
 admin.theme.preview=preview
 month=month
 admin.link.manage=Link
-language=language
+language=Language
 admin.user.info=Personal information
 key=name
 year=year
@@ -58,9 +58,13 @@ view=see
 languageEnglish=English
 password=Password
 admin.management=Blog management
-admin.upgrade.manage=System update
+admin.upgrade.manage=System update settings
+admin.other.manage=Others settings
+admin.admin.manage=Admin settings
+admin.basic.manage=Basic settings
+admin.blog.manage=Blog settings
 admin.upgrade.canPreview=Upgrade preview version
-admin.upgrade.autoCheckCycle=Check cycle
+admin.upgrade.autoCheckCycle=Auto check cycle
 admin.viewAllComment=All comments
 submit=Submit
 save=Save
@@ -138,8 +142,8 @@ close=Close
 templateCenter=Template center
 templateConfig=Template config
 articleEditExitWithOutSaveSuccess=You have attempted to leave this page. Are you sure?
-admin.upgrade.cycle.oneDay=Even day
-admin.upgrade.cycle.oneWeek=Even week
+admin.upgrade.cycle.oneDay=Day
+admin.upgrade.cycle.oneWeek=Week
 admin.upgrade.cycle.halfMonth=Half month
 nextStep=Next step
 changeLog=ChangeLog
@@ -154,3 +158,5 @@ usedCacheSpace=Used Cache Space
 add=Add
 favicon=Favicon
 search=Search
+admin.dark.mode=Dark mode
+admin.color.primary=Primary color
