--- a/admin-web/src/main/resources/i18n/admin_zh_CN.properties
+++ b/admin-web/src/main/resources/i18n/admin_zh_CN.properties
@@ -55,7 +55,6 @@ admin.tag.manage=\u6807\u7B7E
 admin.type.manage=\u5206\u7C7B
 admin.more=\u66F4\u591A
 admin.website.manage=\u7F51\u7AD9\u8BBE\u7F6E
-admin.template.manage=\u4E3B\u9898
 admin.user.info=\u4E2A\u4EBA\u4FE1\u606F
 admin.setting=\u8BBE\u7F6E
 admin.plugin.manage=\u63D2\u4EF6
@@ -68,6 +67,11 @@ admin.management=\u540E\u53F0\u7BA1\u7406
 admin.viewAllComment=\u67E5\u770B\u6240\u6709\u6D88\u606F
 admin.message=\u6761\u6D88\u606F
 admin.upgrade.manage=\u66F4\u65B0\u8BBE\u7F6E
+admin.other.manage=\u5176\u4ED6\u8BBE\u7F6E
+admin.admin.manage=\u7BA1\u7406\u8BBE\u7F6E
+admin.basic.manage=\u57FA\u7840\u8BBE\u7F6E
+admin.template.manage=\u4E3B\u9898\u8BBE\u7F6E
+admin.blog.manage=\u535A\u5BA2\u8BBE\u7F6E
 admin.upgrade.autoCheckCycle=\u81EA\u52A8\u68C0\u67E5\u5468\u671F
 admin.upgrade.cycle.oneDay=\u4E00\u5929
 admin.upgrade.cycle.oneWeek=\u4E00\u5468
@@ -150,3 +154,5 @@ usedCacheSpace=\u7F13\u5B58\u4F7F\u7528\u78C1\u76D8\u7A7A\u95F4
 add=\u6DFB\u52A0
 favicon=\u7F51\u7AD9\u56FE\u6807
 search=\u641C\u7D22
+admin.dark.mode=\u6697\u9ED1\u6A21\u5F0F
+admin.color.primary=\u4E3B\u989C\u8272
