--- a/admin-web/src/main/resources/i18n/admin_en_US.properties
+++ b/admin-web/src/main/resources/i18n/admin_en_US.properties
@@ -163,3 +163,5 @@ admin.offline.article-editing=Saved localstorage
 editor.wordsCount=Words
 editor.linesCount=Lines
 admin_article_page_size=Admin article page size
+article_require_title=Article title required
+article_require_type=Article type required
