Optimize offline write

--- a/admin-web/src/main/resources/i18n/admin_en_US.properties
+++ b/admin-web/src/main/resources/i18n/admin_en_US.properties
@@ -165,3 +165,4 @@ editor.linesCount=Lines
 admin_article_page_size=Admin article page size
 article_require_title=Article title required
 article_require_type=Article type required
+admin.index.activity=Activity
