--- a/admin-web/src/main/resources/i18n/admin_zh_CN.properties
+++ b/admin-web/src/main/resources/i18n/admin_zh_CN.properties
@@ -161,3 +161,4 @@ editor.linesCount=\u884C\u6570
 admin_article_page_size=\u7BA1\u7406\u754C\u9762\u6587\u7AE0\u6BCF\u9875
 article_require_title=\u6587\u7AE0\u6807\u9898\u4E0D\u80FD\u4E3A\u7A7A
 article_require_type=\u6587\u7AE0\u5206\u7C7B\u4E0D\u80FD\u4E3A\u7A7A
+admin.index.activity=\u6D3B\u52A8
