Optimize offline write

--- a/admin-web/src/main/resources/i18n/admin_en_US.properties
+++ b/admin-web/src/main/resources/i18n/admin_en_US.properties
@@ -139,7 +139,7 @@ deleteSuccess=Delete successful
 close=Close
 templateCenter=Template center
 templateConfig=Template config
-articleEditExitWithOutSaveSuccess=You have attempted to leave this page. Are you sure?
+articleEditExitWithOutSaveSuccess=The article has not been saved and you cannot leave the page
 admin.upgrade.cycle.oneDay=Day
 admin.upgrade.cycle.oneWeek=Week
 admin.upgrade.cycle.halfMonth=Half month
