--- a/admin-web/src/main/resources/i18n/admin_zh_CN.properties
+++ b/admin-web/src/main/resources/i18n/admin_zh_CN.properties
@@ -138,7 +138,7 @@ deleteSuccess=\u5220\u9664\u6210\u529F
 close=\u5173\u95ED
 templateCenter=\u4E3B\u9898\u4E2D\u5FC3
 templateConfig=\u4E3B\u9898\u914D\u7F6E
-articleEditExitWithOutSaveSuccess=\u6587\u7AE0\u672A\u4FDD\u5B58\uFF0C\u786E\u5B9A\u79BB\u5F00\u9875\u9762\u5417\uFF1F
+articleEditExitWithOutSaveSuccess=\u6587\u7AE0\u672A\u4FDD\u5B58\uFF0C\u65E0\u6CD5\u79BB\u5F00\u9875\u9762
 nextStep=\u4E0B\u4E00\u6B65
 changeLog=\u53D8\u66F4\u65E5\u5FD7
 pleaseChoose=\u8BF7\u9009\u62E9
