Add mode upgrade tips

--- a/common/src/main/resources/i18n/backend_en_US.properties
+++ b/common/src/main/resources/i18n/backend_en_US.properties
@@ -1,4 +1,5 @@
 dockerUpgradeTips=Docker mode, Please use **sh upgrade.sh** to upgrade
+systemServiceUpgradeTips=System Service mode\uFF0CPlease us **/etc/init.d/zrlog upgrade(-preview)**  to upgrade
 upgradeUnzipping=Unzipping
 upgradeUnzipped=Unzipped success
 upgradeRestarting=Restarting ...
