--- a/common/src/main/resources/i18n/backend_zh_CN.properties
+++ b/common/src/main/resources/i18n/backend_zh_CN.properties
@@ -1,4 +1,5 @@
 dockerUpgradeTips=Docker \u6A21\u5F0F\u4E0B\uFF0C\u4F7F\u7528 **sh upgrade.sh** \u8FDB\u884C\u5347\u7EA7
+systemServiceUpgradeTips=\u670D\u52A1\u6A21\u5F0F\u4E0B\uFF0C\u4F7F\u7528 **/etc/init.d/zrlog upgrade(-preview)** \u8FDB\u884C\u5347\u7EA7
 upgradeUnzipping=\u6B63\u5728\u89E3\u538B
 upgradeUnzipped=\u89E3\u538B\u5DF2\u5B8C\u6210
 upgradeRestarting=\u7A0B\u5E8F\u91CD\u542F\u4E2D ...
