Optimize install logic

--- a/blog-web/src/main/resources/i18n/install_en_US.properties
+++ b/blog-web/src/main/resources/i18n/install_en_US.properties
@@ -40,3 +40,5 @@ helloWorld=Hello, World!
 defaultType=record
 manage=admin
 home=home
+installAgreement=Agreement
+installAgreementNext=Agree & Next
