--- a/blog-web/src/main/resources/i18n/install_zh_CN.properties
+++ b/blog-web/src/main/resources/i18n/install_zh_CN.properties
@@ -6,7 +6,7 @@ installWarn1=\u5B89\u88C5\u8FC7\u7A0B\u4E2D\u7A0B\u5E8F\u4E0D\u4F1A\u521B\u5EFA\
 installWarn2=\u5B89\u88C5\u8FC7\u7A0B\u5C06\u4F1A\u5220\u9664\uFF0C\u6E05\u7A7A\u539F\u6709\u7A0B\u5E8F\u7684\u6570\u636E\u548C\u4F7F\u7528\u6570\u636E\u8868
 installWarn3=\u4E0D\u5EFA\u8BAE\u76F4\u63A5\u4F7F\u7528 root \u8D26\u6237 (MySQL \u5904\u4E8E\u5B89\u5168\u8003\u8651\uFF0C\u9ED8\u8BA4\u7981\u6B62 root \u8FDC\u7A0B\u8BBF\u95EE)
 installPrompt=\u63D0\u793A
-installDatabaseInfo=\u6570\u636E\u5E93
+installDatabaseInfo=\u6570\u636E\u5E93\u4FE1\u606F
 installWebSiteInfo=\u7F51\u7AD9\u4FE1\u606F
 installComplete=\u5B8C\u6210
 installInputDbInfo=\u586B\u5199\u6570\u636E\u5E93\u4FE1\u606F
@@ -40,3 +40,5 @@ helloWorld=\u4F60\u597D\uFF0C\u4E16\u754C\uFF01
 defaultType=\u8BB0\u5F55
 manage=\u7BA1\u7406
 home=\u4E3B\u9875
+installAgreement=\u514D\u8D23\u534F\u8BAE
+installAgreementNext=\u6211\u540C\u610F\u5E76\u5B89\u88C5
