--- a/blog-web/src/main/resources/i18n/install_zh_CN.properties
+++ b/blog-web/src/main/resources/i18n/install_zh_CN.properties
@@ -10,7 +10,7 @@ installDatabaseInfo=\u6570\u636E\u5E93\u4FE1\u606F
 installWebSiteInfo=\u7F51\u7AD9\u4FE1\u606F
 installComplete=\u5B8C\u6210
 installInputDbInfo=\u586B\u5199\u6570\u636E\u5E93\u4FE1\u606F
-installDbHost=\u6570\u636E\u5E93\u670D\u52A1\u5668
+installDbHost=\u6570\u636E\u5E93\u4E3B\u673A\u5730\u5740
 installDbName=\u6570\u636E\u5E93\u540D
 installDbUserName=\u6570\u636E\u5E93\u7528\u6237\u540D
 installDbPassword=\u6570\u636E\u5E93\u5BC6\u7801
