Fix fullscreen sider status error

--- a/blog-web/src/main/resources/i18n/install_en_US.properties
+++ b/blog-web/src/main/resources/i18n/install_en_US.properties
@@ -1,6 +1,7 @@
 installInputDbInfo=Fill in database information
 installWebSiteTitle=Website title
-installedTips=Has been installed, if you need to reinstall, delete the conf/install.lock file
+installedTips=If you need to reinstall, delete the conf/install.lock file
+installedTitle=Installed
 installDbHost=Database server
 installWarn1=The installation process does not create the database, make sure the database exists
 installWarn2=The installation process will delete, clear the original program data and use the data table
