Update dashboard show

--- a/admin-web/src/main/resources/i18n/admin_en_US.properties
+++ b/admin-web/src/main/resources/i18n/admin_en_US.properties
@@ -174,4 +174,7 @@ admin.index.activity=Activity
 commentSize=Comment Size
 commentDate=Comment Date
 articleSize=Article Size
+systemInfo=System Info
+totalMemorySpace=Total Memory
+usedMemorySpace=Program Used Memory
 id=ID
