--- a/admin-web/src/main/resources/i18n/admin_zh_CN.properties
+++ b/admin-web/src/main/resources/i18n/admin_zh_CN.properties
@@ -170,4 +170,7 @@ admin.index.activity=\u6D3B\u52A8
 commentSize=\u8BC4\u8BBA\u91CF
 commentDate=\u8BC4\u8BBA\u65F6\u95F4
 articleSize=\u6587\u7AE0\u6570\u91CF
+systemInfo=\u7CFB\u7EDF\u4FE1\u606F
+totalMemorySpace=\u603B\u5185\u5B58
+usedMemorySpace=\u7A0B\u5E8F\u5185\u5B58
 id=\u7F16\u53F7
