--- a/common/src/main/resources/i18n/backend_en_US.properties
+++ b/common/src/main/resources/i18n/backend_en_US.properties
@@ -39,6 +39,8 @@ serverInfo.dbInfo=Database Info
 serverInfo.encoding=Encoding
 serverInfo.programInfo=Program Info
 serverInfo.uptime=Uptime
+serverInfo.systemLoad=System Load
+serverInfo.cpuInfo=CPU Info
 staticHtmlConfigError=Config static html required host field
 preview403=Need public access article
 missingInstall=Missing Install
