Update build system info

--- a/common/src/main/resources/i18n/backend_en_US.properties
+++ b/common/src/main/resources/i18n/backend_en_US.properties
@@ -41,6 +41,12 @@ serverInfo.programInfo=Program Info
 serverInfo.uptime=Uptime
 serverInfo.systemLoad=System Load
 serverInfo.cpuInfo=CPU Info
+serverInfo.cpuLoad=CPU Load
+serverInfo.dbConnectSize=Database Connect Info
+serverInfo.usedDiskSpace=Used Disk Space
+serverInfo.usedCacheSpace=Used Cache Space
+serverInfo.totalMemorySpace=System Memory
+serverInfo.usedMemorySpace=Program Used Memory
 staticHtmlConfigError=Config static html required host field
 preview403=Need public access article
 missingInstall=Missing Install
