--- a/common/src/main/resources/i18n/backend_zh_CN.properties
+++ b/common/src/main/resources/i18n/backend_zh_CN.properties
@@ -41,6 +41,12 @@ serverInfo.programInfo=\u7A0B\u5E8F\u7248\u672C
 serverInfo.uptime=\u8FD0\u884C\u65F6\u957F
 serverInfo.systemLoad=\u7CFB\u7EDF\u8D1F\u8F7D
 serverInfo.cpuInfo=CPU\u578B\u53F7
+serverInfo.cpuLoad=CPU\u8D1F\u8F7D
+serverInfo.dbConnectSize=\u6570\u636E\u5E93\u8FDE\u63A5\u4FE1\u606F
+serverInfo.usedDiskSpace=\u603B\u4F7F\u7528\u78C1\u76D8\u7A7A\u95F4
+serverInfo.usedCacheSpace=\u7F13\u5B58\u4F7F\u7528\u78C1\u76D8\u7A7A\u95F4
+serverInfo.totalMemorySpace=\u7CFB\u7EDF\u5185\u5B58
+serverInfo.usedMemorySpace=\u7A0B\u5E8F\u4F7F\u7528\u5185\u5B58
 staticHtmlConfigError=\u5F00\u542F\u9759\u6001\u5316\u65F6\uFF0CHost \u5B57\u6BB5\u4E0D\u80FD\u4E3A\u7A7A
 preview403=\u65E0\u6CD5\u9884\u89C8\uFF0C\u6587\u7AE0\u672A\u516C\u5F00\u8BBF\u95EE
 missingInstall=\u672A\u5B8C\u6210\u5B89\u88C5
